tests/ui/lifetimes/iterator-trait-lifetime-error-13058.stderr
error[E0621]: explicit lifetime required in the type of `cont`
  --> $DIR/iterator-trait-lifetime-error-13058.rs:16:21
   |
LL |     let cont_iter = cont.iter();
   |                     ^^^^^^^^^^^ lifetime `'r` required
   |
help: add explicit lifetime `'r` to the type of `cont`
   |
LL | fn check<'r, I: Iterator<Item=usize>, T: Itble<'r, usize, I>>(cont: &'r T) -> bool
   |                                                                      ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0621`.
